--- a/Application/Admin/View/Public/layout.html
+++ b/Application/Admin/View/Public/layout.html
@@ -15,12 +15,12 @@
     <link rel="shortcut icon" type="image/x-icon" href="__ROOT__/favicon.ico">
     <link rel="apple-touch-icon" type="image/x-icon" href="__ROOT__/favicon.ico">
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="__PUBLIC__/bootstrapextend/css/bootstrap.extend.css">
-    <link rel="stylesheet" type="text/css" href="__CSS__/{:C('ADMIN_THEME')}.css"><!-- 后台主题CSS -->
+    <link rel="stylesheet" type="text/css" href="__PUBLIC__/bootstrapextend/css/bootstrap.extend.css?v={:C('STATIC_VERSION')}">
+    <link rel="stylesheet" type="text/css" href="__CSS__/{:C('ADMIN_THEME')}.css?v={:C('STATIC_VERSION')}"><!-- 后台主题CSS -->
     <block name="style"></block>
     <script type="text/javascript" src="__PUBLIC__/jquery/jquery-1.11.1.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="__PUBLIC__/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="__PUBLIC__/bootstrapextend/js/bootstrap.extend.js" charset="utf-8"></script>
+    <script type="text/javascript" src="__PUBLIC__/bootstrapextend/js/bootstrap.extend.js?v={:C('STATIC_VERSION')}" charset="utf-8"></script>
     <style rel="stylesheet" type="text/css">
         @media (min-width: 768px){
             .wrap>.left{
