--- a/Application/Home/View/default/Public/index.html
+++ b/Application/Home/View/default/Public/index.html
@@ -6,17 +6,28 @@
 
 <block name="style">
     <style type="text/css">
-        .thumbnail .lazy{
+        @media (max-width: 768px) {
+            #my-slide .btn {
+                margin-bottom: 8px;
+            }
+        }
+        #my-slide .slider1 .btn-default-inverse:hover,
+        #my-slide .slider1 .btn-default-inverse.hover,
+        #my-slide .slider1 .btn-default-inverse.active {
+            color: #65b72f; 
+        }
+        #my-slide .slider2 .btn-default-inverse:hover,
+        #my-slide .slider2 .btn-default-inverse.hover,
+        #my-slide .slider2 .btn-default-inverse.active {
+            color: #047ecc; 
+        }
+        .feature .thumbnail .lazy{
             width: 100%;
             height: 126px;
         }
-        .thumbnail .caption p{
+        .feature .thumbnail .caption p{
             height: 60px;
             overflow: hidden;
-        }
-        #owl-case img{
-            width: 210px;
-            height: 150px;
         }
     </style>
 </block>
@@ -25,8 +36,8 @@
     <script type="text/javascript">
         $(function(){
             $('#my-slide').DrSlider({
-                width: undefined,
-                height: undefined,
+                width: '100%',
+                height: '500px',
                 userCSS: false,
                 transitionSpeed: 1000,
                 duration: 8000,
@@ -34,11 +45,11 @@
                 showNavigation: true,
                 navigationType: 'circle',
                 positionNavigation: 'in-center-bottom',
-                 navigationColor: 'rgb(223,223,223)',
+                navigationColor: 'rgb(223,223,223)',
                 navigationHoverColor: '#00A4FF',
-                 navigationHighlightColor: '#00A4FF',
-                 showProgress: false,
-                progressColor: '#797979',
+                navigationHighlightColor: '#00A4FF',
+                showProgress: true,
+                progressColor: '#fff',
                 pauseOnHover: true
             });
             $('#owl-case').owlCarousel();
@@ -48,32 +59,47 @@
 
 <block name="jumbotron">
     <div id="my-slide" style="color:#fff;text-shadow: 0 1px 3px rgba(0,0,0,.4),0 0 30px rgba(0,0,0,.075);">
-        <div data-lazy-background="__IMG__/slider01.jpg">
-            <h3 data-pos="['0%', '110%', '25%', '5%']" data-duration="300" data-effect="move">
-                CoreThink框架
-            </h3>
-            <h4 class="hidden-xs-inline" data-pos="['0%', '110%', '40%', '5%']" data-duration="300" data-effect="move">企业级互联网+解决方案云框架，微信开发框架。！</h4>
-            <div data-pos="['0%', '110%', '50%', '5%']" data-duration="200" data-effect="move">
-                <a class="btn btn-success" href="{:U('document/index/cid/1')}">免费下载（V1.0）</a>
-                <a class="btn btn-warning-inverse" href="{:U('document/index/cid/5')}">开发者社区</a>
-                <a class="btn btn-danger-inverse" href="{:U('document/index/cid/1')}">更新日志</a>
-                <a class="btn btn-info-inverse" target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=1ac8801c2f274de186f5c52203f428a1726ba9e3018aa579399b4c6161ca63cd">官方QQ群</a>
+        <div class="slider1" style="background:#65b72f;">
+            <div data-pos="['0%', '100%', '10%', '5%']" data-duration="300" data-effect="move">
+                <h1 style="display:inline-block;">{:C('WEB_SITE_TITLE')}</h1>
+                <label class="label label-danger margin-left">v{:C('CURRENT_VERSION')}</label>
+            </div>
+            <div style="width: 500px;line-height:32px;" data-pos="['0%', '110%', '30%', '5%']" data-duration="300" data-effect="move">
+                 {:C('WEB_SITE_DESCRIPTION')}
+            </div>
+            <div data-pos="['0%', '100%', '60%', '5%']" data-duration="200" data-effect="move">
+                <a class="btn btn-default-inverse btn-pills" href="{:U('document/index/cid/1')}" style="padding:6px 50px;"><i class="fa fa-download"></i> 马 上 下 载</a>
+                <a class="btn btn-default-inverse btn-pills" target="_blank" href="https://github.com/JiangRuyi/corethink"><i class="fa fa-github"></i> GitHub</a>
+                <a class="btn btn-default-inverse btn-pills" target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=1ac8801c2f274de186f5c52203f428a1726ba9e3018aa579399b4c6161ca63cd"><i class="fa fa-qq"></i> QQ群</a>
+                <a class="btn btn-default-inverse btn-pills" target="_blank" href="http://corethink.coding.io"><i class="fa fa-flask"></i> 演示</a>
+            </div>
+            <div data-pos="['100%', '0%', '88%', '5%']" data-duration="300" data-effect="move">
+                <span class="small">生态环境：CoreThink核心 、应用商店、可装卸模块、插件、模版主题、微＋微信平台、硬件设备、第三方开发者</span>
+            </div>
+            <div class="hidden-xs" data-pos="['0%', '110%', '6%', '66%']" data-duration="300" data-effect="move">
+                 <img style="height: 445px;" src="__IMG__/logo_with_hat.png">
             </div>
         </div>
-        <div data-lazy-background="__IMG__/slider02.jpg">
-            <h3 data-pos="['0%', '110%', '35%', '15%']" data-duration="300" data-effect="move">
-                微＋大屏幕
-            </h3>
-            <h4 data-pos="['0%', '110%', '45%', '15%']" data-duration="300" data-effect="move">
-                PPT＋微信墙＋抽奖 全功能大屏幕
-            </h4>
-            <h4 data-pos="['0%', '110%', '50%', '15%']" data-duration="300" data-effect="move">
-                适用于晚会、婚庆、外场、节日、主题活动等各种场景
-            </h4>
-            <div data-pos="['0%', '110%', '60%', '15%']" data-duration="200" data-effect="move">
-                <a class="btn btn-success" href="#">即 将 推 出 <span class="fa fa-hand-o-right"></span></a>
+        <div class="slider2" style="background:#047ecc;">
+            <div data-pos="['0%', '100%', '10%', '5%']" data-duration="300" data-effect="move">
+                <h1 style="display:inline-block;">{:C('WEB_SITE_TITLE')}</h1>
+                <label class="label label-danger margin-left">v{:C('CURRENT_VERSION')}</label>
             </div>
-        </div>
+            <div style="width: 500px;line-height:32px;" data-pos="['0%', '110%', '30%', '5%']" data-duration="300" data-effect="move">
+                 {:C('WEB_SITE_DESCRIPTION')}
+            </div>
+            <div data-pos="['0%', '100%', '60%', '5%']" data-duration="200" data-effect="move">
+                <a class="btn btn-default-inverse btn-pills" href="{:U('document/index/cid/1')}" style="padding:6px 50px;"><i class="fa fa-download"></i> 马 上 下 载</a>
+                <a class="btn btn-default-inverse btn-pills" target="_blank" href="https://github.com/JiangRuyi/corethink"><i class="fa fa-github"></i> GitHub</a>
+                <a class="btn btn-default-inverse btn-pills" target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=1ac8801c2f274de186f5c52203f428a1726ba9e3018aa579399b4c6161ca63cd"><i class="fa fa-qq"></i> QQ群</a>
+                <a class="btn btn-default-inverse btn-pills" target="_blank" href="http://corethink.coding.io"><i class="fa fa-flask"></i> 演示</a>
+            </div>
+            <div data-pos="['100%', '0%', '88%', '5%']" data-duration="300" data-effect="move">
+                <span class="small">生态环境：CoreThink核心 、应用商店、可装卸模块、插件、模版主题、微＋微信平台、硬件设备、第三方开发者</span>
+            </div>
+            <div class="hidden-xs" data-pos="['0%', '100%', '6%', '66%']" data-duration="300" data-effect="move">
+                 <img style="height: 445px;" src="__IMG__/logo_with_hat.png">
+            </div>
         </div>
     </div>
 </block>
@@ -81,7 +107,7 @@
 <block name="body">
     <div class="container">
         <a class="btn btn-info btn-block margin-top margin-bottom">特性</a>
-        <div class="row">
+        <div class="row feature">
             <div class="col-xs-12 col-sm-4 col-md-3">
                 <div class="thumbnail">
                     <a href="#"><img class="lazy" data-original="__IMG__/index01.png"></a>
@@ -184,21 +210,6 @@
                             我们追求快乐，做真正喜欢做的事。我们追求效率，做正确有意义的事。我们追求成长，要成为最优秀的人。
                         </p>
                     </div>
-                </div>
-            </div>
-        </div>
-        <a class="btn btn-success btn-block margin-top margin-bottom">成功案例</a>
-        <div class="row">
-            <div class="col-xs-12">
-                <div id="owl-case" class="owl-carousel">
-                    <a href="http://youxiyue.cn" class="item"><img src="__IMG__/case05.png"><br><span>游戏约</span></a>
-                    <a class="item"><img src="__IMG__/case06.png"><br><span>微＋大屏幕</span></a>
-                    <a href="http://codc.coding.io" class="item"><img src="__IMG__/case07.png"><br><span>中国设计师联盟</span></a>
-                    <a class="item"><img src="__IMG__/case08.png"><br><span>T3T2游戏</span></a>
-                    <a href="http://xl.njupt.edu.cn" class="item"><img src="__IMG__/case01.png"><br><span>心理健康教育与咨询中心</span></a>
-                    <a href="http://iamcmsod.njupt.edu.cn" class="item"><img src="__IMG__/case04.png"><br><span>“分子系统与有机器件”研究团队</span></a>
-                    <a href="http://iam.njupt.edu.cn" class="item"><img src="__IMG__/case02.png"><br><span>材料科学与工程学院</span></a>
-                    <a href="http://coa.njupt.edu.cn" class="item"><img src="__IMG__/case03.png"><br><span>自动化学院</span></a>
                 </div>
             </div>
         </div>
