--- a/Application/Install/View/Index/complete.html
+++ b/Application/Install/View/Index/complete.html
@@ -15,9 +15,14 @@
                 <span>恭喜您，{:C('INSTALL_PRODUCT_NAME')}安装完成！</span>
             </div>
             <div class="panel-body">
-                <present name="info">{$info}</present>
-                <a class="btn btn-primary" href="{:U('Admin/Index/index')}">登录后台</a>
-                <a class="btn btn-success" href="__ROOT__/">访问首页</a>
+                <div class="alert alert-success text-center">
+                    <h3>SUCCESS !</h3>
+                </div>
+                <div class="alert alert-danger margin-top">
+                    后台管理员用户名密码默认均为admin，请尽快登录系统进行修改，防止系统被恶意攻击。
+                </div>
+                <a class="btn btn-primary" target="_blank" href="{:U('Admin/Index/index')}">登录后台</a>
+                <a class="btn btn-success" target="_blank" href="__ROOT__/">访问首页</a>
             </div>
             <div class="panel-footer">
                 <span>版权所有 (c) 2014－<php>echo date("Y",time());</php>{:C('INSTALL_COMPANY_NAME')} 保留所有权利。</span>
