--- a/Application/Install/View/Index/step2.html
+++ b/Application/Install/View/Index/step2.html
@@ -25,16 +25,16 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <volist name="env" id="item">
+                        <volist name="check_env" id="item">
                             <tr>
-                                <td>{$item[0]}</td>
-                                <td>{$item[1]}</td>
-                                <td><i class="glyphicon {$item[4]}"></i> {$item[3]}</td>
+                                <td>{$item['title']}</td>
+                                <td>{$item['limit']}</td>
+                                <td><i class="glyphicon {$item['icon']}"></i> {$item['current']}</td>
                             </tr>
                         </volist>
                     </tbody>
                 </table>
-                <present name="dirfile">
+                <present name="check_dirfile">
                     <table class="table table-hover">
                         <caption><h4>目录、文件权限检查</h4></caption>
                         <thead>
@@ -45,35 +45,35 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <volist name="dirfile" id="item">
+                            <volist name="check_dirfile" id="item">
                                 <tr>
-                                    <td>{$item[3]}</td>
+                                    <td>{$item['path']}</td>
                                     <td><i class="glyphicon glyphicon-ok text-success"></i> 可写</td>
-                                    <td><i class="glyphicon {$item[2]}"></i> {$item[1]}</td>
+                                    <td><i class="glyphicon {$item['icon']}"></i> {$item['title']}</td>
                                 </tr>
                             </volist>
                         </tbody>
                     </table>
                 </present>
                 <table class="table table-hover">
-                    <caption><h4>函数依赖性检查</h4></caption>
+                    <caption><h4>函数及扩展依赖性检查</h4></caption>
                     <thead>
                         <tr>
-                            <th>函数名称</th>
+                            <th>名称</th>
                             <th>检查结果</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <volist name="func" id="item">
+                        <volist name="check_func_and_ext" id="item">
                             <tr>
-                                <td>{$item[0]}()</td>
-                                <td><i class="glyphicon {$item[2]}"></i> {$item[1]}</td>
+                                <td>{$item['name']}</td>
+                                <td><i class="glyphicon {$item['icon']}"></i> {$item['title']}</td>
                             </tr>
                         </volist>
                     </tbody>
                 </table>
-                <a class="btn btn-primary btn-block ajax-get" href="{:U('Install/step1')}">下一步</a>
-                <a class="btn btn-default btn-block" href="{:U('Index/index')}">上一步</a>
+                <a class="btn btn-primary btn-block ajax-get" href="{:U('step2')}">下一步</a>
+                <a class="btn btn-default btn-block" href="{:U('step1')}">上一步</a>
             </div>
             <div class="panel-footer">
                 <span>版权所有 (c) 2014－<php>echo date("Y",time());</php>{:C('INSTALL_COMPANY_NAME')} 保留所有权利。</span>
