--- a/Application/Home/View/default/User/register.html
+++ b/Application/Home/View/default/User/register.html
@@ -16,11 +16,45 @@
             <div class="col-xs-12 col-md-5">
                 <div class="login">
                     <ul class="nav-tabs nav">
-                        <li data-tab="reg1" class="active"><a href="#reg1" data-toggle="tab">邮箱注册</a></li>
-                        <li data-tab="reg2"><a href="#reg2" data-toggle="tab">手机号注册</a></li>
+                        <li data-tab="reg1" class="active"><a href="#reg1" data-toggle="tab">用户名注册</a></li>
+                        <li data-tab="reg2"><a href="#reg2" data-toggle="tab">邮箱注册</a></li>
+                        <li data-tab="reg3"><a href="#reg3" data-toggle="tab">手机号注册</a></li>
                     </ul>
                     <div class="tab-content">
                         <div id="reg1" class='tab-pane active'>
+                            <form action="__SELF__" method="post" class="form reg-form-username">
+                                <fieldset>
+                                    <div class="blank"></div>
+                                    <div class="form-group">
+                                        <label class="item-label">用户名<span class="check-tips"></span></label>
+                                        <div class="control">
+                                            <input type="text" class="form-control" name="username" placeholder="请输入用户名">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="item-label">密码<span class="check-tips"></span></label>
+                                        <div class="control">
+                                            <input type="text" class="form-control" name="password" placeholder="请输入密码">
+                                        </div>
+                                    </div>
+                                     <div class="form-group">
+                                        <label class="item-label">验证码<span class="check-tips"></span></label>
+                                        <table>
+                                            <tr>
+                                                <td><input type="text" class="form-control" name="verify" placeholder="请输入验证码"></td>
+                                                <td><img class="verifyimg reloadverify margin-left" style="cursor:pointer;height:42px;" alt="验证码" src="{:U('Home/User/verify')}" title="点击刷新"</td>
+                                            </tr>
+                                        </table>
+                                    </div>
+                                    <label class="item-label">点击下一步即表示您同意<a href="#">服务条款</a></label>
+                                    <div class="form-group">
+                                        <input type="hidden" name="reg_type" value="username">
+                                        <button class="btn btn-primary btn-block submit ajax-post" type="submit" target-form="reg-form-username">下 一 步</button>
+                                    </div>
+                                </fieldset>
+                            </form>
+                        </div>
+                        <div id="reg2" class='tab-pane'>
                             <form action="__SELF__" method="post" class="form reg-form-email">
                                 <fieldset>
                                     <div class="blank"></div>
@@ -47,13 +81,13 @@
                                     </div>
                                     <label class="item-label">点击下一步即表示您同意<a href="#">服务条款</a></label>
                                     <div class="form-group">
-                                        <input type="hidden" name="reg_type" value="1">
+                                        <input type="hidden" name="reg_type" value="email">
                                         <button class="btn btn-primary btn-block submit ajax-post" type="submit" target-form="reg-form-email">下 一 步</button>
                                     </div>
                                 </fieldset>
                             </form>
                         </div>
-                        <div id="reg2" class='tab-pane'>
+                        <div id="reg3" class='tab-pane'>
                             <form action="__SELF__" method="post" class="form reg-form-mobile">
                                 <fieldset>
                                     <div class="blank"></div>
@@ -80,7 +114,7 @@
                                     </div>
                                     <label class="item-label">点击下一步即表示您同意<a href="#">服务条款</a></label>
                                     <div class="form-group">
-                                        <input type="hidden" name="reg_type" value="2">
+                                        <input type="hidden" name="reg_type" value="mobile">
                                         <button class="btn btn-primary btn-block submit ajax-post" type="submit" target-form="reg-form-mobile">下 一 步</button>
                                     </div>
                                 </fieldset>
@@ -109,6 +143,18 @@
                 },1000);
             }
         }
+
+        //刷新验证码
+        $(function(){
+            var verifyimg = $(".verifyimg").attr("src");
+            $(".reloadverify").click(function(){
+                if( verifyimg.indexOf('?')>0){
+                    $(".verifyimg").attr("src", verifyimg+'&random='+Math.random());
+                }else{
+                    $(".verifyimg").attr("src", verifyimg.replace(/\?.*$/,'')+'?'+Math.random());
+                }
+            });
+        });
 
         $(function(){
             $('.send-mail-verify').click(function(){
