--- a/Application/Admin/View/Public/login.html
+++ b/Application/Admin/View/Public/login.html
@@ -155,13 +155,13 @@
                     </div>
                     <div class="form-group">
                         <div class="input-group">
-                            <span class="input-group-addon bg-none"><i class="fa fa-lock"></i></span>
+                            <span class="input-group-addon bg-none"><i class="fa fa-key"></i></span>
                             <input type="password" class="form-control" placeholder="请输入密码" name="password">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="input-group">
-                            <span class="input-group-addon bg-none"><i class="fa fa-lock"></i></span>
+                            <span class="input-group-addon bg-none"><i class="fa fa-eye"></i></span>
                             <input type="text" class="form-control" name="verify" placeholder="请输入验证码">
                             <span class="input-group-addon bg-none verifyimg-box"><img class="verifyimg reloadverify" style="cursor:pointer;height:32px;border-radius:4px;" alt="验证码" src="{:U('verify')}" title="点击刷新"></span>
                         </div>
