--- a/Application/Home/View/default/Builder/listbuilder_addon.html
+++ b/Application/Home/View/default/Builder/listbuilder_addon.html
@@ -17,7 +17,7 @@
             <div class="col-xs-12 col-sm-3">
                 <div class="list-group">
                     <volist name="addon_list" id="vo">
-                        <a href="{:U('Addon/weijia/name/'.$vo['name'])}" class="list-group-item">{$vo.title}</a>
+                        <a href="{:U('Addon/adminList/name/'.$vo['name'])}" class="list-group-item">{$vo.title}</a>
                     </volist>
                 </div>
             </div>
