重构：Listbuilder中的列表右侧按钮处理逻辑

--- a/Application/Home/View/default/Public/index.html
+++ b/Application/Home/View/default/Public/index.html
@@ -69,7 +69,7 @@
             </div>
             <div data-pos="['0%', '100%', '60%', '5%']" data-duration="200" data-effect="move">
                 <a class="btn btn-default-inverse btn-pills" href="{:U('document/index/cid/1')}" style="padding:6px 50px;"><i class="fa fa-download"></i> 马 上 下 载</a>
-                <a class="btn btn-default-inverse btn-pills" target="_blank" href="https://github.com/JiangRuyi/corethink"><i class="fa fa-github"></i> GitHub</a>
+                <a class="btn btn-default-inverse btn-pills" target="_blank" href="https://github.com/corethink"><i class="fa fa-github"></i> GitHub</a>
                 <a class="btn btn-default-inverse btn-pills" target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=1ac8801c2f274de186f5c52203f428a1726ba9e3018aa579399b4c6161ca63cd"><i class="fa fa-qq"></i> QQ群</a>
                 <a class="btn btn-default-inverse btn-pills" target="_blank" href="http://corethink.coding.io"><i class="fa fa-flask"></i> 演示</a>
             </div>
