--- a/Application/Admin/View/_Layout/main.html
+++ b/Application/Admin/View/_Layout/main.html
@@ -14,15 +14,13 @@
     <title>{$meta_title}｜{:C('WEB_SITE_TITLE')}后台管理</title>
     <link rel="shortcut icon" type="image/x-icon" href="__ROOT__/favicon.ico">
     <link rel="apple-touch-icon" type="image/x-icon" href="__ROOT__/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/admin.css">
-    <?php if(0): ?>
-        <link rel="stylesheet" type="text/css" href="__PUBLIC__/libs/bootstrapextend/css/bootstrap.extend.css?v={:C('STATIC_VERSION')}">
-        <link rel="stylesheet" type="text/css" href="__CSS__/{:C('ADMIN_THEME')}.css?v={:C('STATIC_VERSION')}"><!-- 后台主题CSS -->
-    <?php endif; ?>
+    <link rel="stylesheet" type="text/css" href="__PUBLIC__/libs/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="__PUBLIC__/libs/bootstrap_extend/css/bootstrap.extend.css?v={:C('STATIC_VERSION')}">
+    <link rel="stylesheet" type="text/css" href="__CSS__/{:C('ADMIN_THEME')}.css?v={:C('STATIC_VERSION')}"><!-- 后台主题CSS -->
     <block name="style"></block>
     <script type="text/javascript" src="__PUBLIC__/libs/jquery/1.x/jquery-1.11.3.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="__PUBLIC__/libs/bootstrap/dist/js/bootstrap.min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="__PUBLIC__/libs/bootstrapextend/js/bootstrap.extend.js?v={:C('STATIC_VERSION')}" charset="utf-8"></script>
+    <script type="text/javascript" src="__PUBLIC__/libs/bootstrap_extend/js/bootstrap.extend.js?v={:C('STATIC_VERSION')}" charset="utf-8"></script>
     <style rel="stylesheet" type="text/css">
         @media (min-width: 768px){
             .wrap>.left{
