修复：BS图标替换成FontAwesome因名称不一致导致的不显示问题

--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -133,7 +133,7 @@
                             <div class="pull-right">
                                 <button id="daterange_set" class="btn btn-default btn-sm" style="margin-top:-5px;margin-right:-5px;"><span class="fa fa-cog"></span></button>
                             </div>
-                            <i class="fa fa-stats"></i> 用户增长统计
+                            <i class="fa fa-line-chart"></i> 用户增长统计
                         </div>
                         <div class="panel-body">
                             <h5 class="text-center">{$start_date}－{$end_date} {$count_day}天用户增长</h5>
