--- a/Application/Admin/View/_Layout/main.html
+++ b/Application/Admin/View/_Layout/main.html
@@ -108,7 +108,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="{:U('Admin/Index/rmdirr')}" class="ajax-get"><i class="fa fa-trash"></i> 清空缓存</a></li>
-                    <li><a target="_blank" href="__ROOT__/"><i class="fa fa-home"></i> 打开前台</a></li>
+                    <li><a target="_blank" href="__ROOT__/"><i class="fa fa-external-link-square"></i> 打开前台</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="fa fa-user"></i> {$__USER__.username} <b class="caret"></b>
@@ -117,7 +117,7 @@
                             <li><a target="_blank" href="{:U('Home/User/center')}"><i class="fa fa-home"></i> 个人中心</a></li>
                             <li><a href="{:U('Admin/User/edit', array('id' => is_login()))}"><i class="fa fa-edit"></i> 修改信息</a></li>
                             <li class="divider"></li>
-                            <li><a href="{:U('Admin/Public/logout')}" class="ajax-get"><i class="fa fa-log-out"></i> 退出</a></li>
+                            <li><a href="{:U('Admin/Public/logout')}" class="ajax-get"><i class="fa fa-sign-out"></i> 退出</a></li>
                         </ul>
                     </li>
                 </ul>
