--- a/Application/Admin/View/_Resource/gulp/admin.less
+++ b/Application/Admin/View/_Resource/gulp/admin.less
@@ -21,7 +21,7 @@
 //
 //
 // Core variables and mixins
-@import "../../_Resource/less/variables.less";
+@import "./variables.less";
 @import "../../../../../Public/libs/bootstrap/less/mixins.less";
 //
 // 引入Bootstrap重置样式和相关依赖
@@ -74,6 +74,7 @@
 //
 //
 // 引入第三方类库样式 (不需要定义less变量) ===================================================
+@import (less) "../../../../../Public/libs/bootstrap_extend/css/bootstrap.extend.css";
 @import (less) "../../../../../Public/libs/jquery_huploadify/Huploadify.css";
 @import "../../../../../Public/libs/jquery_tokeninput/css/token-input-bootstrap.less";
 @import (less) "../../../../../Public/libs/bootstrap_daterangepicker/daterangepicker.css";
