--- a/Application/Home/View/default/_Layout/main.html
+++ b/Application/Home/View/default/_Layout/main.html
@@ -14,22 +14,22 @@
     <block name="title"><title>{$meta_title}｜{:C('WEB_SITE_TITLE')}－{:C('WEB_SITE_SLOGAN')}</title></block>
     <link rel="shortcut icon" type="image/x-icon" href="__ROOT__/favicon.ico">
     <link rel="apple-touch-icon" type="image/x-icon" href="__ROOT__/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="__PUBLIC__/libs/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="__PUBLIC__/libs/bootstrap_extend/css/bootstrap.extend.css?v={:C('STATIC_VERSION')}">
-    <link rel="stylesheet" type="text/css" href="__CSS__/default.css?v={:C('STATIC_VERSION')}">
+    <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/home.min.css?v={:C('STATIC_VERSION')}"> <!-- 引入gulp合并压缩的css -->
+    <link rel="stylesheet" type="text/css" href="__CSS__/main.css?v={:C('STATIC_VERSION')}"> <!-- 引入当前主题无需经过gulp并压缩的css -->
     <block name="style"></block>
     <script type="text/javascript" src="__PUBLIC__/libs/jquery/1.x/jquery-1.11.3.min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="__PUBLIC__/libs/bootstrap/dist/js/bootstrap.min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="__PUBLIC__/libs/bootstrap_extend/js/bootstrap.extend.js?v={:C('STATIC_VERSION')}" charset="utf-8"></script>
-    <script type="text/javascript">
-        $(function(){
-            $('[data-toggle="popover"]').popover(); //一次性初始化所有弹出框
-        });
-    </script>
+    <script type="text/javascript" src="__PUBLIC__/js/home.min.js?v={:C('STATIC_VERSION')}" charset="utf-8"></script> <!-- 引入gulp并压缩的js -->
+    <script type="text/javascript" src="__JS__/main.js?v={:C('STATIC_VERSION')}" charset="utf-8"></script> <!-- 引入当前主题无需经过gulp并压缩的js -->
     <block name="script"></block>
     {:C('WEB_SITE_STATISTICS')} <!-- 站点统计代码 -->
 </head>
-<body>
+
+<?php
+    $CONTROLLER_NAME = strtolower($Think.CONTROLLER_NAME);
+    $ACTION_NAME = strtolower($Think.ACTION_NAME);
+?>
+
+<body id="<?php echo 'body-'.$CONTROLLER_NAME.'-'.$ACTION_NAME; ?>" class="<?php echo 'body-'.$CONTROLLER_NAME.' body-'.$CONTROLLER_NAME.'-'.$ACTION_NAME; ?>">
     <block name="wrap">
         {:hook('PageHeader')} <!-- 文档开始钩子 -->
 
