--- a/Application/Home/View/default/_Resource/css/main.css
+++ b/Application/Home/View/default/_Resource/css/main.css
@@ -1,9 +1,6 @@
 body {
     -webkit-font-smoothing: antialiased;
 }
-.breadcrumb {
-    margin-top: 10px
-}
 .btn-default-inverse {
     color: #fff;
     border-color: #fff;
@@ -15,7 +12,11 @@ body {
     color: #333; 
     background: #fff;
 }
+.top-nav{
+    margin-bottom: 0px;
+}
 .main-nav {
+    border: 0px;
     background-color: #fff;
     -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08);
     -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08);
