完善：后台登录界面美化 优化：模版TMPL_PARSE_STRING相关配置改善

--- a/Application/Admin/View/Public/_login.less
+++ b/Application/Admin/View/Public/_login.less
@@ -5,7 +5,7 @@
         top: 0px;
         bottom: 0px;
         left: 0px;
-        background: #135686;
+        background: #2472b4;
     }
     .login-panel {
         margin-top: 10%;
@@ -15,29 +15,43 @@
             background: transparent;
 
             .panel-title {
-                // color: #fff;
+                color: #fff;
                 font-size: 32px;
                 padding-top: 30px;
                 padding-bottom: 5px;
                 font-weight: lighter;
 
                 .logo {
-                    width: 40px;
-                    height: 40px;
+                    height: 60px;
                     margin-top: -10px;
                 }
             }
             .info {
-                color: #aaddff;
-                margin-top: 40px;
+                margin-top: 18px;
             }
         }
         .panel-body {
-            padding: 38px;
+            padding: 20px;
+
+            .input-group {
+                input {
+                    height: 40px;
+                }
+                .input-group-addon .fa {
+                    width: 18px;
+                }
+                .verifyimg-box {
+                    padding: 0px;
+                }
+                .verifyimg-box .verifyimg {
+                    width: 138px;
+                    height: 38px;
+                    cursor: pointer;
+                    border-radius: 4px;
+                }
+            }
         }
-        .verifyimg-box {
-            padding: 0px 0px;
-        }
+        
     }
     .bottom {
         margin-bottom: 10px;
