--- a/Application/Admin/View/_Layout/_main.less
+++ b/Application/Admin/View/_Layout/_main.less
@@ -4,7 +4,8 @@
 
         .navbar-brand {
             img {
-                height: 20px;
+                height: 32px;
+                margin: -6px 0px;
             }
         }
     }
