--- a/Application/Home/View/default/Index/index.html
+++ b/Application/Home/View/default/Index/index.html
@@ -83,7 +83,7 @@
                 <span class="small">生态环境：CoreThink核心 、应用商店、可装卸模块、插件、模版主题、微＋微信平台、硬件设备、第三方开发者</span>
             </div>
             <div class="hidden-xs" data-pos="['0%', '110%', '6%', '66%']" data-duration="300" data-effect="move">
-                 <img style="height: 445px;" src="__IMG__/logo_with_hat.png">
+                 <img style="height: 445px;" src="__HOME_IMG__/logo_with_hat.png">
             </div>
         </div>
         <div class="slider2" style="background:#047ecc;">
@@ -104,7 +104,7 @@
                 <span class="small">生态环境：CoreThink核心 、应用商店、可装卸模块、插件、模版主题、微＋微信平台、硬件设备、第三方开发者</span>
             </div>
             <div class="hidden-xs" data-pos="['0%', '100%', '6%', '66%']" data-duration="300" data-effect="move">
-                 <img style="height: 445px;" src="__IMG__/logo_with_hat.png">
+                 <img style="height: 445px;" src="__HOME_IMG__/logo_with_hat.png">
             </div>
         </div>
     </div>
@@ -116,7 +116,7 @@
         <div class="row feature">
             <div class="col-xs-12 col-sm-4 col-md-3">
                 <div class="thumbnail">
-                    <a href="#"><img class="lazy" data-original="__IMG__/index01.png"></a>
+                    <a href="#"><img class="lazy" data-original="__HOME_IMG__/index01.png"></a>
                     <div class="caption">
                         <h3 class="text-center">
                             <a href="#">框架简介<br><small>简单、轻量、高效</small></a>
@@ -129,7 +129,7 @@
             </div>
             <div class="col-xs-12 col-sm-4 col-md-3">
                 <div class="thumbnail">
-                    <a href="#"><img class="lazy" data-original="__IMG__/index02.png"></a>
+                    <a href="#"><img class="lazy" data-original="__HOME_IMG__/index02.png"></a>
                     <div class="caption">
                         <h3 class="text-center">
                             <a href="#">开源免费<br><small>遵循Apache2开源协议</small></a>
@@ -142,7 +142,7 @@
             </div>
             <div class="col-xs-12 col-sm-4 col-md-3">
                 <div class="thumbnail">
-                    <a href="#"><img class="lazy" data-original="__IMG__/index03.png"></a>
+                    <a href="#"><img class="lazy" data-original="__HOME_IMG__/index03.png"></a>
                     <div class="caption">
                         <h3 class="text-center">
                             <a href="#">极易使用<br><small>容易上手</small></a>
@@ -155,7 +155,7 @@
             </div>
             <div class="col-xs-12 col-sm-4 col-md-3">
                 <div class="thumbnail">
-                    <a href="#"><img class="lazy" data-original="__IMG__/index04.png"></a>
+                    <a href="#"><img class="lazy" data-original="__HOME_IMG__/index04.png"></a>
                     <div class="caption">
                         <h3 class="text-center">
                             <a href="#">无限可能<br><small>想到做到</small></a>
@@ -168,7 +168,7 @@
             </div>
             <div class="col-xs-12 col-sm-4 col-md-3">
                 <div class="thumbnail">
-                    <a href="#"><img class="lazy" data-original="__IMG__/index05.png"></a>
+                    <a href="#"><img class="lazy" data-original="__HOME_IMG__/index05.png"></a>
                     <div class="caption">
                         <h3 class="text-center">
                             <a href="#">通俗文档<br><small>通俗易懂</small></a>
@@ -181,7 +181,7 @@
             </div>
             <div class="col-xs-12 col-sm-4 col-md-3">
                 <div class="thumbnail">
-                    <a href="#"><img class="lazy" data-original="__IMG__/index06.png"></a>
+                    <a href="#"><img class="lazy" data-original="__HOME_IMG__/index06.png"></a>
                     <div class="caption">
                         <h3 class="text-center">
                             <a href="#">ThinkPHP构建<br><small>大道至简</small></a>
@@ -207,7 +207,7 @@
             </div>
             <div class="col-xs-12 col-sm-4 col-md-3">
                 <div class="thumbnail">
-                    <a href="#"><img class="lazy" data-original="__IMG__/index08.png"></a>
+                    <a href="#"><img class="lazy" data-original="__HOME_IMG__/index08.png"></a>
                     <div class="caption">
                         <h3 class="text-center">
                             <a href="#">加入我们<br><small>崇尚自由</small></a>
