--- a/Application/Admin/View/Public/login.html
+++ b/Application/Admin/View/Public/login.html
@@ -6,8 +6,7 @@
     <title>{$meta_title}｜{:C('WEB_SITE_TITLE')}后台管理</title>
 
     <script src="__PUBLIC__/libs/jquery/1.x/jquery-1.11.3.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/admin.css">
-
+    <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/admin.css?v={:C('STATIC_VERSION')}">
 </head>
 
 <?php
@@ -20,32 +19,40 @@
     <div id="particles-js" class="background"></div>
 
     <div class="container">
-        <div class="panel panel-default login-panel border-none padding-none col-xs-12 col-md-4 col-md-offset-4">
+        <div class="panel panel-default login-panel col-xs-12 col-md-4 col-md-offset-4">
             <div class="panel-heading">
-                <h3 class="panel-title text-center"><img class="logo" src="__ROOT__/logo.png"> {:C('WEB_SITE_TITLE')}</h3>
-                <div class="info text-right">————{:C('WEB_SITE_SLOGAN')}</div>
+                <h3 class="panel-title text-center">
+                    <img class="logo" src="__HOME_IMG__/logo_with_title.png">
+                </h3>
+                <div class="info text-muted text-center">
+                    <span>让开发更简单</span>
+                    <a class="text-muted" target="_blank" href="{:C('WEBSITE_DOMAIN')}">
+                        {:C('PRODUCT_NAME')}
+                    </a>
+                </div>
             </div>
             <div class="panel-body">
                 <form class="login-form" action="{:U('Public/login')}" method="post">
                     <div class="form-group">
                         <div class="input-group">
-                            <span class="input-group-addon bg-none"><i class="fa fa-user"></i></span>
+                            <span class="input-group-addon"><i class="fa fa-user"></i></span>
                             <input type="text" class="form-control" placeholder="邮箱/手机号/用户名" name="username">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="input-group">
-                            <span class="input-group-addon bg-none"><i class="fa fa-key"></i></span>
+                            <span class="input-group-addon"><i class="fa fa-key"></i></span>
                             <input type="password" class="form-control" placeholder="请输入密码" name="password">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="input-group">
-                            <span class="input-group-addon bg-none"><i class="fa fa-eye"></i></span>
+                            <span class="input-group-addon"><i class="fa fa-eye"></i></span>
                             <input type="text" class="form-control" name="verify" placeholder="请输入验证码">
-                            <span class="input-group-addon bg-none verifyimg-box"><img class="verifyimg reloadverify" style="cursor:pointer;height:32px;border-radius:4px;" alt="验证码" src="{:U('verify')}" title="点击刷新"></span>
+                            <span class="input-group-addon verifyimg-box">
+                                <img class="verifyimg reloadverify" alt="验证码" src="{:U('verify')}" title="点击刷新">
+                            </span>
                         </div>
-
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary btn-block submit ajax-post" target-form="login-form">登录</button>
@@ -58,7 +65,8 @@
     <div class="bottom navbar-fixed-bottom text-center">
         <span class="padding-right">Powered by {:C('PRODUCT_NAME')} v{:C('CURRENT_VERSION')}</span>
         <span>Copyright © <a href="{:C('WEBSITE_DOMAIN')}" target="_blank">{:C('COMPANY_NAME')}</a> All rights reserved.</span>
-        <script src="__PUBLIC__/js/admin.js"></script>
+        <script src="__PUBLIC__/libs/particles/particles.min.js"></script>
+        <script src="__PUBLIC__/js/admin.js?v={:C('STATIC_VERSION')}"></script>
     </div>
 </body>
 </html>
